--- a/src/main/resources/public/otherHTMLs/owner.html
+++ b/src/main/resources/public/otherHTMLs/owner.html
@@ -290,7 +290,7 @@
             </ul>
         </div>
     </aside>
-    <button id="alertButton" style=" margin-left: 25px; float: left; border: none; background-color: #27E1CE; padding: 20px 40px; color: white; border-radius: 10px;" type="button" onClick= "displayalertsOwner()">
+    <button id="alertButton" style=" margin-left: 25px; float: left; border: none; background-color: #27E1CE; padding: 20px 40px; color: white; border-radius: 10px;" type="button" onClick= "displayAlerts()">
         <span>Inbox</span>
         <span id="badge" style="
 							top: 120px;
