resolve login in otherHTMLs problem

--- a/src/main/resources/public/otherHTMLs/mainReferee.html
+++ b/src/main/resources/public/otherHTMLs/mainReferee.html
@@ -62,8 +62,8 @@
 	<![endif]-->
 
 	</head>
-	<body onload="setInterval(getMainRefereeAlerts,1000);">
-	
+	<body>
+	<!--onload="setInterval(getMainRefereeAlerts,1000000000);"-->
 	<div id="fh5co-page">
 	<header id="fh5co-header" role="banner">
 		<div class="container">
