--- a/src/main/resources/public/otherHTMLs/index.html
+++ b/src/main/resources/public/otherHTMLs/index.html
@@ -104,7 +104,7 @@
 		   			<div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
 		   				<div class="slider-text-inner">
 		   					<h2>Welcome to our Soccer System!</h2>
-		   					<a class="btn btn-primary btn-lg" type="button" onclick="displayLoginPage()">Login </a>
+		   					<a class="btn btn-primary btn-lg" type="button" onclick="displayLoginPage_OtherHTMLs()">Login </a>
 
 						</div>
 		   			</div>
@@ -211,9 +211,9 @@
 
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
-	<script src="otherHTMLs/js/login.js"></script>
+	<script src="js/login.js"></script>
 <!--	<script src="otherHTMLs/js/far.js"></script>-->
-	<script src="otherHTMLs/js/owner.js"></script>
+	<script src="js/owner.js"></script>
 
 
 
