remove alerts and change url of http requests

--- a/src/main/resources/public/otherHTMLs/FAR.html
+++ b/src/main/resources/public/otherHTMLs/FAR.html
@@ -217,6 +217,7 @@
 							<br>
 							<input type="button" value="back" onclick="moveBackToChooseLeague_fromChooseYear_PlacementPolicy()">
 							<input type="button" value="change policy" onclick="updatePlacementPolicyInDB()">
+							<input type="button" value="apply policy" onclick="applyPlacementPolicyInDB()">
 						</form>
 					</div>
 				</div>
