--- a/src/main/resources/public/otherHTMLs/alerts.html
+++ b/src/main/resources/public/otherHTMLs/alerts.html
@@ -84,6 +84,8 @@
 					<ul>
 						<li><a href="otherHTMLs/about.html">About</a></li>
 						<li><a href="otherHTMLs/contact.html">Contact</a></li>
+                        <li class="cta"><a href="index.html">Log Out</a></li>
+
 					</ul>
 				</nav>
 			</div>
