--- a/src/main/resources/public/otherHTMLs/FAR.html
+++ b/src/main/resources/public/otherHTMLs/FAR.html
@@ -74,7 +74,7 @@
 					<ul>
 						<li><a href="about.html">About</a></li>
 						<li><a href="contact.html">Contact</a></li>
-						<li class="cta"><a href="#">Get started</a></li>
+						<li class="cta"><a href="index.html">Log Out</a></li>
 					</ul>
 				</nav>
 			</div>
