--- a/src/main/resources/public/otherHTMLs/Historyalerts.html
+++ b/src/main/resources/public/otherHTMLs/Historyalerts.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -55,80 +56,52 @@
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <!-- Theme style  -->
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/login.css">
+    <!--    <link rel="stylesheet" type="text/css" href="css/index.css">-->
+
 
     <!-- Modernizr JS -->
-    <script src="js/modernizr-2.6.2.min.js"></script>
-    <!-- FOR IE9 below -->
-    <!--[if lt IE 9]>
-    <script src="js/respond.min.js"></script>
+    <!--    <script src="js/modernizr-2.6.2.min.js"></script>-->
+    <!--    <script src="js/main.js"></script>-->
+    <script src="js/login.js"></script>
+    <!--	<script src="otherHTMLs/js/far.js"></script>-->
+    <script src="js/owner.js"></script>
+
+
     <![endif]-->
 
+
 </head>
-<body>
+<body onload="chooseHistoryAlerts()">
+
+
+<!--	<div id="fh5co-page">-->
+<span>
+	<header id="fh5co-header" role="banner">
+		<div class="container">
+			<div class="header-inner">
+				<h1><a href="index.html">Teammates</a></h1>
+				<nav role="navigation">
+					<ul>
+						<li><a href="otherHTMLs/about.html">About</a></li>
+						<li><a href="otherHTMLs/contact.html">Contact</a></li>
+                        <li class="cta"><a href="index.html">Log Out</a></li>
+
+					</ul>
+				</nav>
+			</div>
+		</div>
+	</header>
+	</span>
+
+<div id="alerts"  style=" text-align: center; "> <h4>list of History alerts!</h4>
+    <br>
+
 
 
 
-<header id="fh5co-header" role="banner">
-    <div class="container">
-        <div class="header-inner">
-            <h1><a>Teammates</a></h1>
-            <nav role="navigation">
-                <ul>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li class="cta"><a href="index.html">Log Out</a></li>
-                </ul>
-            </nav>
-        </div>
-    </div>
-</header>
-<br>
-<br>
-<br>
-<br>
-<div id="Login" style="">
-    <h3 style="text-align: center">
-        Welcome to Login page!
-        <br>
-        <br>
-        Please enter the details below:
-    </h3>
-    <label for="username">UserName: </label>
-    <input type="text" id="username" name="username">
-    <br>
-    <br>
-    <label for="pwd">Password:</label>
-    <input type="password" id="pwd" name="pwd">
-    <br>
-    <br>
 
-    <button class="loginButton" type="button" onclick="loginButton()">Login!</button>
 </div>
-<br>
-<br>
-
-<div id="choosing" style="display: none" >
-
-    <h3 id="hello" style="text-align: center;"> Hello </h3>
-
-    <h4 style="text-align: center">
-        Please choose the subscriber you want to use on the website:
-    </h4>
-    <br>
-    <div id="radioDiv" style="display: table; margin: 0 auto; ">
-        <label for="chooseSub">Choose a subscriber:</label>
-        <select id="chooseSub"> </select>
-
-
-    </div>
-    <br>
-    <br>
-    <br>
-    <button class="subscriberButton" type="button" onclick="directSubscriberChoose()">Next!</button>
-</div>
-
-
+<!-- jQuery -->
 <script src="js/jquery.min.js"></script>
 <!-- jQuery Easing -->
 <script src="js/jquery.easing.1.3.js"></script>
@@ -142,12 +115,14 @@
 <script src="js/jquery.flexslider-min.js"></script>
 
 <!-- MAIN JS -->
-<script src="js/main.js"></script>
+<!--<script src="js/main.js"></script>-->
 <script src="js/login.js"></script>
 <!--	<script src="otherHTMLs/js/far.js"></script>-->
 <script src="js/owner.js"></script>
 
 
 
+
 </body>
 </html>
+
