--- a/src/main/resources/public/otherHTMLs/chooseSubscriber.html
+++ b/src/main/resources/public/otherHTMLs/chooseSubscriber.html
@@ -83,6 +83,8 @@
 					<ul>
 						<li><a href="otherHTMLs/about.html">About</a></li>
 						<li><a href="otherHTMLs/contact.html">Contact</a></li>
+                        <li class="cta"><a href="index.html">Log Out</a></li>
+
 					</ul>
 				</nav>
 			</div>
@@ -111,7 +113,7 @@
     <br>
     <br>
     <br>
-    <button class="subscriberButton" type="button" style="display: inline-block"; onclick="subscriberChoose()">Next!</button>
+    <button class="subscriberButton" type="button" style="display: inline-block; margin-left: 15cm;" onclick="subscriberChoose()">Next!</button>
 </div>
 
 
