--- a/src/main/resources/public/otherHTMLs/mainReferee.html
+++ b/src/main/resources/public/otherHTMLs/mainReferee.html
@@ -63,7 +63,7 @@
 
 	</head>
 
-	<body onload="intervalMainReferee()">
+	<body onload="setIntervals()">
 
 	<div id="fh5co-page">
 	<header id="fh5co-header" role="banner">
