--- a/src/main/resources/public/otherHTMLs/lineReferee.html
+++ b/src/main/resources/public/otherHTMLs/lineReferee.html
@@ -62,7 +62,7 @@
     <![endif]-->
 
 </head>
-<body onload="intervalLineReferee()">
+<body onload="setIntervals()">
 
 <div id="fh5co-page">
     <header id="fh5co-header" role="banner">
