--- a/src/main/resources/public/otherHTMLs/Historyalerts.html
+++ b/src/main/resources/public/otherHTMLs/Historyalerts.html
@@ -65,6 +65,8 @@
     <script src="js/login.js"></script>
     <!--	<script src="otherHTMLs/js/far.js"></script>-->
     <script src="js/owner.js"></script>
+    <script src="js/lineReferee.js"></script>
+    <script src="js/mainReferee.js"></script>
 
 
     <![endif]-->
