--- a/src/main/resources/public/otherHTMLs/alerts.html
+++ b/src/main/resources/public/otherHTMLs/alerts.html
@@ -56,15 +56,21 @@
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <!-- Theme style  -->
     <link rel="stylesheet" href="css/style.css">
-<!--    <link rel="stylesheet" type="text/css" href="css/index.css">-->
+    <!--    <link rel="stylesheet" type="text/css" href="css/index.css">-->
 
 
     <!-- Modernizr JS -->
-<!--    <script src="js/modernizr-2.6.2.min.js"></script>-->
-<!--    <script src="js/main.js"></script>-->
+    <!--    <script src="js/modernizr-2.6.2.min.js"></script>-->
+    <!--    <script src="js/main.js"></script>-->
     <script src="js/login.js"></script>
     <!--	<script src="otherHTMLs/js/far.js"></script>-->
     <script src="js/owner.js"></script>
+    <script src="js/mainReferee.js"></script>
+    <script src="js/lineReferee.js"></script>
+    <script src="js/Fan.js"></script>
+    <script src="js/far.js.js"></script>
+
+
 
 
     <![endif]-->
@@ -72,6 +78,8 @@
 
 </head>
 <body onload="chooseAlerts()">
+
+
 
 
 <!--	<div id="fh5co-page">-->
