ohad - alerts fan

--- a/src/main/resources/public/otherHTMLs/addPlacementPolicy.html
+++ b/src/main/resources/public/otherHTMLs/addPlacementPolicy.html
@@ -13,19 +13,6 @@
     <meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
     <meta name="author" content="FreeHTML5.co" />
 
-    <!--
-      //////////////////////////////////////////////////////
-
-      FREE HTML5 TEMPLATE
-      DESIGNED & DEVELOPED by FreeHTML5.co
-
-      Website: 		http://freehtml5.co/
-      Email: 			info@freehtml5.co
-      Twitter: 		http://twitter.com/fh5co
-      Facebook: 		https://www.facebook.com/fh5co
-
-      //////////////////////////////////////////////////////
-       -->
 
     <!-- Facebook and Twitter integration -->
     <meta property="og:title" content=""/>
@@ -69,15 +56,16 @@
     <header id="fh5co-header" role="banner">
         <div class="container">
             <div class="header-inner">
-                <h1><a href="index.html">Flew</a></h1>
+                <h1><a href="index.html">Teammates</a></h1>
                 <nav role="navigation">
                     <ul>
-                        <li><a href="mainReferee.html">Work</a></li>
+                        <!-- <li><a href="mainReferee.html">Work</a></li>
                         <li class="active"><a href="FAR.html">Services</a></li>
-                        <li><a href="pricing.html">Pricing</a></li>
+                        <li><a href="pricing.html">Pricing</a></li> -->
+
                         <li><a href="about.html">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
-                        <li class="cta"><a href="#">Get started</a></li>
+                         <!-- <li class="cta"><a href="#">Get started</a></li>  -->
                     </ul>
                 </nav>
             </div>
@@ -87,7 +75,7 @@
 <!--start of addPlacementPolicy page-->
     <div id="fh5co-work-section" class="fh5co-light-grey-section">
         <div class="container">
-            <h1>please choose the needed details:</h1>
+            <h1>Select league and season details:</h1>
             <div class="row">
                 <form>
                     <label for="league">Choose league:</label>
@@ -99,19 +87,19 @@
                     <br>
                     <label for="year">Choose a year:</label>
                     <select id="year">
-                        <option value="2012">2012</option>
+                        <!-- <option value="2012">2012</option>
                         <option value="2013">2013</option>
                         <option value="2014">2014</option>
                         <option value="2015">2015</option>
                         <option value="2016">2016</option>
                         <option value="2017">2017</option>
                         <option value="2018">2018</option>
-                        <option value="2019">2019</option>
+                        <option value="2019">2019</option> -->
                         <option value="2020">2020</option>
                     </select>
                     <br>
                     <br>
-                    <label for="placementPolicy">Choose a placement policy:</label>
+                    <label for="placementPolicy">Choose a scoring policy:</label>
                     <select id="placementPolicy">
                         <option value="policyA">policyA</option>
                         <option value="policyB">policyB</option>
@@ -126,7 +114,7 @@
 
 <!--end of addPlacementPolicy page-->
 
-    <div class="fh5co-cta" style="background-image: url(images/slide_1.jpg);">
+    <div class="fh5co-cta" style="background-image: url(images/slide_1.jpg); display: none;">
         <div class="overlay"></div>
         <div class="container">
             <div class="col-md-12 text-center animate-box">
@@ -136,9 +124,9 @@
         </div>
     </div>
 
-    <footer id="fh5co-footer" role="contentinfo">
+    <footer id="fh5co-footer" role="contentinfo"  style="display: none;">
 
-        <div class="container">
+        <div class="container" >
             <div class="col-md-3 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
                 <h3>About Us</h3>
                 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
