--- a/src/main/resources/public/otherHTMLs/contact.html
+++ b/src/main/resources/public/otherHTMLs/contact.html
@@ -13,20 +13,6 @@
 	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FreeHTML5.co" />
 
-  <!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FreeHTML5.co
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
-
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
@@ -74,7 +60,7 @@
 					<ul>
 						<li><a href="about.html">About</a></li>
 						<li class="active"><a href="contact.html">Contact</a></li>
-						<li class="cta"><a href="#">Get started</a></li>
+						<!-- <li class="cta"><a href="#">Get started</a></li> -->
 					</ul>
 				</nav>
 			</div>
@@ -140,7 +126,7 @@
 	</div>
 
 
-	<footer id="fh5co-footer" role="contentinfo">
+	<!-- <footer id="fh5co-footer" role="contentinfo">
 	
 		<div class="container">
 			<div class="col-md-3 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
@@ -163,9 +149,32 @@
 					<li><a href="#">HandCrafted Templates</a></li>
 				</ul>
 
-			</div>
+			</div> -->
 
-			<div class="col-md-2 col-md-push-1 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
+			<footer id="fh5co-footer" role="contentinfo">
+	
+				<div class="container">
+					<div class="col-md-3 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
+						<h3>About Us</h3>
+						<p> A group of 3-rd year Ben-Gurion University students, created this system as part of our project-preparation course. </p>
+						<p><a href="login.html" class="btn btn-primary btn-outline with-arrow btn-sm">Join Us <i class="icon-arrow-right"></i></a></p>
+					</div>
+					<div class="col-md-6 col-md-push-1 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
+						<h3>System Features</h3>
+						<ul class="float">
+							<li>Football Association Represenative league managment control system</li>
+							<li>Creating and managaing teams</li>
+							<li>Setting Diffrent Scoring&Game Policies</li>	
+						</ul>
+						<ul class="float">
+							<li>Referees control system</li>
+							<li>Real-Time User-Alerts</li>
+							<li>24/7 Support</li>
+						</ul>
+		
+					</div>
+
+			<!-- <div class="col-md-2 col-md-push-1 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
 				<h3>Follow Us</h3>
 				<ul class="fh5co-social">
 					<li><a href="#"><i class="icon-twitter"></i></a></li>
@@ -173,13 +182,7 @@
 					<li><a href="#"><i class="icon-google-plus"></i></a></li>
 					<li><a href="#"><i class="icon-instagram"></i></a></li>
 				</ul>
-			</div>
-			
-			
-			<div class="col-md-12 fh5co-copyright text-center">
-				<p>&copy; 2016 Free HTML5 template. All Rights Reserved. <span>Designed with <i class="icon-heart"></i> by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images by <a href="http://unsplash.com/" target="_blank">Unsplash</a></span></p>	
-			</div>
-			
+			</div> -->
 		</div>
 	</footer>
 	</div>
