--- a/src/main/resources/public/otherHTMLs/Fan.html
+++ b/src/main/resources/public/otherHTMLs/Fan.html
@@ -1,196 +1,4 @@
 
-<!--<!DOCTYPE html>-->
-<!--&lt;!&ndash;[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]&ndash;&gt;-->
-<!--&lt;!&ndash;[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]&ndash;&gt;-->
-<!--&lt;!&ndash;[if IE 8]>         <html class="no-js lt-ie9"> <![endif]&ndash;&gt;-->
-<!--&lt;!&ndash;[if gt IE 8]>&lt;!&ndash;> <html class="no-js"> &lt;!&ndash;<![endif]&ndash;&gt;-->
-<!--<head>-->
-<!--<meta charset="utf-8">-->
-<!--<meta http-equiv="X-UA-Compatible" content="IE=edge">-->
-<!--<title>Flew &mdash; Free HTML5 Bootstrap Website Template by FreeHTML5.co</title>-->
-<!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-<!--<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />-->
-<!--<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />-->
-<!--<meta name="author" content="FreeHTML5.co" />-->
-
-<!--&lt;!&ndash;-->
-<!--//////////////////////////////////////////////////////-->
-
-<!--FREE HTML5 TEMPLATE-->
-<!--DESIGNED & DEVELOPED by FreeHTML5.co-->
-
-<!--Website: 		http://freehtml5.co/-->
-<!--Email: 			info@freehtml5.co-->
-<!--Twitter: 		http://twitter.com/fh5co-->
-<!--Facebook: 		https://www.facebook.com/fh5co-->
-
-<!--//////////////////////////////////////////////////////-->
-<!--&ndash;&gt;-->
-
-<!--&lt;!&ndash; Facebook and Twitter integration &ndash;&gt;-->
-<!--<meta property="og:title" content=""/>-->
-<!--<meta property="og:image" content=""/>-->
-<!--<meta property="og:url" content=""/>-->
-<!--<meta property="og:site_name" content=""/>-->
-<!--<meta property="og:description" content=""/>-->
-<!--<meta name="twitter:title" content="" />-->
-<!--<meta name="twitter:image" content="" />-->
-<!--<meta name="twitter:url" content="" />-->
-<!--<meta name="twitter:card" content="" />-->
-
-<!--&lt;!&ndash; Place favicon.ico and apple-touch-icon.png in the root directory &ndash;&gt;-->
-<!--<link rel="shortcut icon" href="favicon.ico">-->
-
-<!--<link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,700" rel="stylesheet">-->
-
-<!--&lt;!&ndash; Animate.css &ndash;&gt;-->
-<!--<link rel="stylesheet" href="css/animate.css">-->
-<!--&lt;!&ndash; Icomoon Icon Fonts&ndash;&gt;-->
-<!--<link rel="stylesheet" href="css/icomoon.css">-->
-<!--&lt;!&ndash; Bootstrap  &ndash;&gt;-->
-<!--<link rel="stylesheet" href="css/bootstrap.css">-->
-<!--&lt;!&ndash; Flexslider  &ndash;&gt;-->
-<!--<link rel="stylesheet" href="css/flexslider.css">-->
-<!--&lt;!&ndash; Owl Carousel  &ndash;&gt;-->
-<!--<link rel="stylesheet" href="css/owl.carousel.min.css">-->
-<!--<link rel="stylesheet" href="css/owl.theme.default.min.css">-->
-<!--&lt;!&ndash; Theme style  &ndash;&gt;-->
-<!--<link rel="stylesheet" href="css/style.css">-->
-<!--<link rel="stylesheet" type="text/css" href="css/index.css">-->
-
-
-<!--&lt;!&ndash; Modernizr JS &ndash;&gt;-->
-<!--<script src="js/modernizr-2.6.2.min.js"></script>-->
-<!--&lt;!&ndash; FOR IE9 below &ndash;&gt;-->
-<!--&lt;!&ndash;[if lt IE 9]>-->
-<!--<script src="js/respond.min.js"></script>-->
-<!--<script src="otherHTMLs/js/login.js"></script>-->
-<!--<script src="otherHTMLs/js/owner.js"></script>-->
-
-
-<!--<![endif]&ndash;&gt;-->
-
-
-<!--</head>-->
-<!--<body>-->
-
-
-<!--&lt;!&ndash;	<div id="fh5co-page">&ndash;&gt;-->
-<!--<span>-->
-<!--<header id="fh5co-header" role="banner">-->
-<!--<div class="container">-->
-<!--<div class="header-inner">-->
-<!--<h1><a href="index.html">SoccerSystem</a></h1>-->
-<!--<nav role="navigation">-->
-<!--<ul>-->
-<!--<li><a href="otherHTMLs/mainReferee.html">Referee</a></li>-->
-<!--<li><a href="otherHTMLs/FAR.html">FAR</a></li>-->
-<!--<li><a href="otherHTMLs/pricing.html">Pricing</a></li>-->
-<!--<li><a href="otherHTMLs/about.html">About</a></li>-->
-<!--<li><a href="otherHTMLs/contact.html">Contact</a></li>-->
-<!--</ul>-->
-<!--</nav>-->
-<!--</div>-->
-<!--</div>-->
-<!--</header>-->
-<!--</span>-->
-
-<!--<div class="container">-->
-
-<!--</div>-->
-<!--&lt;!&ndash;<div id="main" >&ndash;&gt;-->
-<!--&lt;!&ndash;    <aside id="fh5co-hero" class="js-fullheight">&ndash;&gt;-->
-<!--&lt;!&ndash;        <div class="flexslider js-fullheight">&ndash;&gt;-->
-<!--&lt;!&ndash;            <ul class="slides">&ndash;&gt;-->
-<!--&lt;!&ndash;                <li style="background-image: url(images/slide_11.jpg);">&ndash;&gt;-->
-<!--&lt;!&ndash;                    <div class="overlay-gradient"></div>&ndash;&gt;-->
-<!--&lt;!&ndash;                    <div class="container">&ndash;&gt;-->
-<!--&lt;!&ndash;                        <div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">&ndash;&gt;-->
-<!--&lt;!&ndash;                            <div class="slider-text-inner">&ndash;&gt;-->
-<!--&lt;!&ndash;                                <h2>Welcome to our Soccer System!</h2>&ndash;&gt;-->
-<!--&lt;!&ndash;                                <a class="btn btn-primary btn-lg" type="button" onclick="displayLoginPage()">Login </a>&ndash;&gt;-->
-
-<!--&lt;!&ndash;                            </div>&ndash;&gt;-->
-<!--&lt;!&ndash;                        </div>&ndash;&gt;-->
-<!--&lt;!&ndash;                    </div>&ndash;&gt;-->
-<!--&lt;!&ndash;                </li>&ndash;&gt;-->
-
-<!--&lt;!&ndash;            </ul>&ndash;&gt;-->
-<!--&lt;!&ndash;        </div>&ndash;&gt;-->
-<!--&lt;!&ndash;    </aside>&ndash;&gt;-->
-<!--&lt;!&ndash;</div>&ndash;&gt;-->
-
-<!--<br>-->
-<!--<br>-->
-
-
-
-<!--<div id="ownerPage"  >-->
-<!--<script>-->
-<!--var y= document.getElementById("alertButton");-->
-<!--document.getElementById("badge").innerHTML = globalVariable.ownerAlerts.length;-->
-<!--if (y.style.display === "none") {-->
-<!--y.style.display = "block";-->
-<!--} else {-->
-<!--y.style.display = "none";-->
-<!--}-->
-<!--</script>-->
-<!--<h3 style="text-align: center;">-->
-<!--Hello Owner:-->
-<!--</h3>-->
-
-<!--<h4 style="text-align: center;">-->
-<!--To open a new team add the name and click on "Open a new team:-->
-<!--<br>-->
-<!--<br>-->
-<!--<label for="teamName">Team Name: </label>-->
-<!--<input type="text" id="teamName" name="teamName">-->
-<!--<br>-->
-<!--<br>-->
-<!--<button class="teamButton" type="button" onclick="opentNewTeam()">Open a new  team!</button>-->
-<!--<br>-->
-<!--<br>-->
-<!--<br>-->
-<!--</h4>-->
-<!--</div>-->
-
-
-<!--<div id="alerts"  style="display: none; text-align: center; "> list of alerts!-->
-
-
-
-<!--</div>-->
-
-
-
-
-
-<!--&lt;!&ndash; jQuery &ndash;&gt;-->
-<!--<script src="js/jquery.min.js"></script>-->
-<!--&lt;!&ndash; jQuery Easing &ndash;&gt;-->
-<!--<script src="js/jquery.easing.1.3.js"></script>-->
-<!--&lt;!&ndash; Bootstrap &ndash;&gt;-->
-<!--<script src="js/bootstrap.min.js"></script>-->
-<!--&lt;!&ndash; Waypoints &ndash;&gt;-->
-<!--<script src="js/jquery.waypoints.min.js"></script>-->
-<!--&lt;!&ndash; Owl Carousel &ndash;&gt;-->
-<!--<script src="js/owl.carousel.min.js"></script>-->
-<!--&lt;!&ndash; Flexslider &ndash;&gt;-->
-<!--<script src="js/jquery.flexslider-min.js"></script>-->
-
-<!--&lt;!&ndash; MAIN JS &ndash;&gt;-->
-<!--<script src="js/main.js"></script>-->
-<!--<script src="otherHTMLs/js/login.js"></script>-->
-<!--&lt;!&ndash;	<script src="otherHTMLs/js/far.js"></script>&ndash;&gt;-->
-<!--<script src="otherHTMLs/js/owner.js"></script>-->
-
-
-
-
-<!--</body>-->
-<!--</html>-->
-
-
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -204,20 +12,6 @@
     <meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
     <meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
     <meta name="author" content="FreeHTML5.co" />
-
-    <!--
-      //////////////////////////////////////////////////////
-
-      FREE HTML5 TEMPLATE
-      DESIGNED & DEVELOPED by FreeHTML5.co
-
-      Website: 		http://freehtml5.co/
-      Email: 			info@freehtml5.co
-      Twitter: 		http://twitter.com/fh5co
-      Facebook: 		https://www.facebook.com/fh5co
-
-      //////////////////////////////////////////////////////
-       -->
 
     <!-- Facebook and Twitter integration -->
     <meta property="og:title" content=""/>
@@ -368,7 +162,7 @@
 
     <!--end of makeReport page-->
 
-    <div class="fh5co-cta" style="background-image: url(images/slide_1.jpg);">
+    <div class="fh5co-cta" style="background-image: url(images/slide_1.jpg); display:none;">
         <div class="overlay"></div>
         <div class="container">
             <div class="col-md-12 text-center animate-box">
@@ -379,7 +173,7 @@
     </div>
 
 
-    <footer id="fh5co-footer" role="contentinfo">
+    <footer id="fh5co-footer" role="contentinfo" style="display: none;">
 
         <div class="container">
             <div class="col-md-3 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
