--- a/src/main/resources/public/otherHTMLs/about.html
+++ b/src/main/resources/public/otherHTMLs/about.html
@@ -179,27 +179,25 @@
 		<div class="container">
 			<div class="col-md-3 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
 				<h3>About Us</h3>
-				<p> We are group of 5 students in the third year of our studies. We made this system as part of our project-preparation course. </p>
+				<p> A group of 3-rd year Ben-Gurion University students, created this system as part of our project-preparation course. </p>
 				<p><a href="login.html" class="btn btn-primary btn-outline with-arrow btn-sm">Join Us <i class="icon-arrow-right"></i></a></p>
 			</div>
 			<div class="col-md-6 col-md-push-1 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
-				<h3>Our Services</h3>
+				<h3>System Features</h3>
 				<ul class="float">
-					<li>FAR Controlling</li>
-					<li>Open Team Requests</li>
-					<li>Real Time Alerts</li>
-					<li>Changing Score Policy</li>
+					<li>Football Association Represenative league managment control system</li>
+					<li>Creating and managaing teams</li>
+					<li>Setting Diffrent Scoring&Game Policies</li>	
 				</ul>
 				<ul class="float">
-					<li>Changing Placement Policy</li>
-					<li>Add Event Of Game</li>
-					<li>Make Game Report</li>
+					<li>Referees control system</li>
+					<li>Real-Time User-Alerts</li>
 					<li>24/7 Support</li>
 				</ul>
 
 			</div>
 
-			<div class="col-md-2 col-md-push-1 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
+			<!-- <div class="col-md-2 col-md-push-1 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
 				<h3>Follow Us</h3>
 				<ul class="fh5co-social">
 					<li><a href="#"><i class="icon-twitter"></i></a></li>
@@ -207,11 +205,10 @@
 					<li><a href="#"><i class="icon-google-plus"></i></a></li>
 					<li><a href="#"><i class="icon-instagram"></i></a></li>
 				</ul>
-			</div>
+			</div> -->
 			
 			
 			<div class="col-md-12 fh5co-copyright text-center">
-				<p>&copy; 2016 Free HTML5 template. All Rights Reserved.</p>
 			</div>
 			
 		</div>
