--- a/src/main/resources/public/otherHTMLs/addEvent.html
+++ b/src/main/resources/public/otherHTMLs/addEvent.html
@@ -13,20 +13,6 @@
     <meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
     <meta name="author" content="FreeHTML5.co" />
 
-    <!--
-      //////////////////////////////////////////////////////
-
-      FREE HTML5 TEMPLATE
-      DESIGNED & DEVELOPED by FreeHTML5.co
-
-      Website: 		http://freehtml5.co/
-      Email: 			info@freehtml5.co
-      Twitter: 		http://twitter.com/fh5co
-      Facebook: 		https://www.facebook.com/fh5co
-
-      //////////////////////////////////////////////////////
-       -->
-
     <!-- Facebook and Twitter integration -->
     <meta property="og:title" content=""/>
     <meta property="og:image" content=""/>
@@ -114,15 +100,15 @@
     <header id="fh5co-header" role="banner">
         <div class="container">
             <div class="header-inner">
-                <h1><a href="index.html">Flew</a></h1>
+                <h1><a href="index.html">Teammates</a></h1>
                 <nav role="navigation">
                     <ul>
-                        <li><a href="mainReferee.html">Work</a></li>
+                        <!-- <li><a href="mainReferee.html">Work</a></li>
                         <li class="active"><a href="FAR.html">Services</a></li>
-                        <li><a href="pricing.html">Pricing</a></li>
+                        <li><a href="pricing.html">Pricing</a></li> -->
                         <li><a href="about.html">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
-                        <li class="cta"><a href="#">Get started</a></li>
+                        <!-- <li class="cta"><a href="#">Get started</a></li> -->
                     </ul>
                 </nav>
             </div>
@@ -163,17 +149,17 @@
         </div>
     </div>
 
-    <div class="fh5co-cta" style="background-image: url(images/slide_1.jpg);">
+    <div class="fh5co-cta" style="background-image: url(images/slide_1.jpg)">
         <div class="overlay"></div>
         <div class="container">
-            <div class="col-md-12 text-center animate-box">
+            <div class="col-md-12 text-center animate-box" style="display: none;">
                 <h3>We Try To Update The Site Everyday</h3>
                 <p><a href="#" class="btn btn-primary btn-outline with-arrow">Get started now! <i class="icon-arrow-right"></i></a></p>
             </div>
         </div>
     </div>
 
-    <footer id="fh5co-footer" role="contentinfo">
+    <footer id="fh5co-footer" role="contentinfo" style="display: none;">
 
         <div class="container">
             <div class="col-md-3 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
@@ -208,10 +194,6 @@
                 </ul>
             </div>
 
-
-            <div class="col-md-12 fh5co-copyright text-center">
-                <p>&copy; 2016 Free HTML5 template. All Rights Reserved. <span>Designed with <i class="icon-heart"></i> by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Colored Icons by <a href="https://dribbble.com/TrinhHo" target="_blank">Trinh Ho</a> Demo Images by <a href="http://unsplash.com/" target="_blank">Unsplash</a></span></p>
-            </div>
 
         </div>
     </footer>
