--- a/src/main/resources/public/otherHTMLs/addScorePolicy.html
+++ b/src/main/resources/public/otherHTMLs/addScorePolicy.html
@@ -69,7 +69,7 @@
     <header id="fh5co-header" role="banner">
         <div class="container">
             <div class="header-inner">
-                <h1><a href="index.html">Flew</a></h1>
+                <h1><a href="index.html">Teammates</a></h1>
                 <nav role="navigation">
                     <ul>
                         <li><a href="mainReferee.html">Work</a></li>
