--- a/src/main/resources/public/otherHTMLs/alerts.html
+++ b/src/main/resources/public/otherHTMLs/alerts.html
@@ -13,20 +13,6 @@
     <meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
     <meta name="author" content="FreeHTML5.co" />
 
-    <!--
-      //////////////////////////////////////////////////////
-
-      FREE HTML5 TEMPLATE
-      DESIGNED & DEVELOPED by FreeHTML5.co
-
-      Website: 		http://freehtml5.co/
-      Email: 			info@freehtml5.co
-      Twitter: 		http://twitter.com/fh5co
-      Facebook: 		https://www.facebook.com/fh5co
-
-      //////////////////////////////////////////////////////
-       -->
-
     <!-- Facebook and Twitter integration -->
     <meta property="og:title" content=""/>
     <meta property="og:image" content=""/>
@@ -96,7 +82,7 @@
 	</header>
 	</span>
 
-<div id="alerts"  style=" text-align: center; "> <h4>list of alerts!</h4>
+<div id="alerts"  style=" text-align: center; "> <h4>Alert List :</h4>
     <br>
 
 
