--- a/src/main/resources/public/otherHTMLs/chooseSubscriber.html
+++ b/src/main/resources/public/otherHTMLs/chooseSubscriber.html
@@ -63,8 +63,7 @@
     <script src="js/modernizr-2.6.2.min.js"></script>
     <!-- FOR IE9 below -->
     <!--[if lt IE 9]>
-    <script src="js/respond.min.js"></script>
-    <script src="js/login.js"></script>-->
+
 
 
     <![endif]-->
@@ -72,8 +71,7 @@
 
 </head>
 <body onload= "displaySubscriberPage()">
-<!---->
-<!--	<div id="fh5co-page">-->
+
 <span>
 	<header id="fh5co-header" role="banner">
 		<div class="container">
@@ -111,9 +109,7 @@
 
     </div>
     <br>
-    <br>
-    <br>
-    <button class="subscriberButton" type="button" style="display: inline-block; margin-left: 15cm;" onclick="subscriberChoose()">Next!</button>
+    <button class="subscriberButton" type="button" style="text-align: center;  margin-left: 17cm;" onclick="subscriberChoose()">Next!</button>
 </div>
 
 
