--- a/src/main/resources/public/otherHTMLs/lineReferee.html
+++ b/src/main/resources/public/otherHTMLs/lineReferee.html
@@ -13,20 +13,6 @@
     <meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
     <meta name="author" content="FreeHTML5.co" />
 
-    <!--
-      //////////////////////////////////////////////////////
-
-      FREE HTML5 TEMPLATE
-      DESIGNED & DEVELOPED by FreeHTML5.co
-
-      Website: 		http://freehtml5.co/
-      Email: 			info@freehtml5.co
-      Twitter: 		http://twitter.com/fh5co
-      Facebook: 		https://www.facebook.com/fh5co
-
-      //////////////////////////////////////////////////////
-       -->
-
     <!-- Facebook and Twitter integration -->
     <meta property="og:title" content=""/>
     <meta property="og:image" content=""/>
@@ -218,7 +204,7 @@
     </div>
     <!--end of makeReport page-->
 
-    <div class="fh5co-cta" style="background-image: url(images/slide_1.jpg);">
+    <div class="fh5co-cta" style="background-image: url(images/slide_1.jpg); display:none;">
         <div class="overlay"></div>
         <div class="container">
             <div class="col-md-12 text-center animate-box">
@@ -229,7 +215,7 @@
     </div>
 
 
-    <footer id="fh5co-footer" role="contentinfo">
+    <footer id="fh5co-footer" role="contentinfo" style="display: none;">
 
         <div class="container">
             <div class="col-md-3 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
