ohad - alerts fanHistoryAlerts

--- a/src/main/resources/public/otherHTMLs/Historyalerts.html
+++ b/src/main/resources/public/otherHTMLs/Historyalerts.html
@@ -67,6 +67,7 @@
     <script src="js/owner.js"></script>
     <script src="js/lineReferee.js"></script>
     <script src="js/mainReferee.js"></script>
+    <script src="js/Fan.js"></script>
 
 
     <![endif]-->
