--- a/src/main/resources/public/otherHTMLs/alerts.html
+++ b/src/main/resources/public/otherHTMLs/alerts.html
@@ -54,7 +54,7 @@
     <script src="js/mainReferee.js"></script>
     <script src="js/lineReferee.js"></script>
     <script src="js/Fan.js"></script>
-    <script src="js/far.js.js"></script>
+    <script src="js/far.js"></script>
 
 
 
