--- a/src/main/resources/public/otherHTMLs/login.html
+++ b/src/main/resources/public/otherHTMLs/login.html
@@ -146,8 +146,8 @@
 <script src="js/login.js"></script>
 <!--	<script src="otherHTMLs/js/far.js"></script>-->
 <script src="js/owner.js"></script>
-
-
-
+<script src="js/Fan.js"></script>
+<script src="js/lineReferee.js"></script>
+<script src="js/mainReferee.js"></script>
 </body>
 </html>
