ohad - owner team request not working

--- a/src/main/resources/public/otherHTMLs/owner.html
+++ b/src/main/resources/public/otherHTMLs/owner.html
@@ -132,7 +132,31 @@
     </div>
     <!--end owner page-->
 
+  <!--start add event page-->
+  <div id="addTeamPage" style="display: none" >
+    <div id="fh5co-work-section2" class="fh5co-light-grey-section" style="padding: 100px 100px">
+        <div class="container">
+            <div class="row">
+                <div id="ownerPage">
+                    <h4 style="text-align: center;">
+                        To open a new team add the name and click on "Open a new team":
+                        <br>
+                        <br>
+                        <label for="teamName">Team Name: </label>
+                        <input type="text" id="teamName" name="teamName">
+                        <br>
+                        <br>
+                        <button class="teamButton" style="display: inline-block" type="button" onclick="opentNewTeam()">Open a new  team!</button>
+                        <br>
+                        <br>
+                        <br>
+                    </h4>
 
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!-- jQuery -->
 <script src="js/jquery.min.js"></script>
