--- a/src/main/resources/public/otherHTMLs/chooseSubscriber.html
+++ b/src/main/resources/public/otherHTMLs/chooseSubscriber.html
@@ -7,25 +7,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Flew &mdash; Free HTML5 Bootstrap Website Template by FreeHTML5.co</title>
+    <title>Teammates Web Application</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
-    <meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-    <meta name="author" content="FreeHTML5.co" />
-
-    <!--
-      //////////////////////////////////////////////////////
-
-      FREE HTML5 TEMPLATE
-      DESIGNED & DEVELOPED by FreeHTML5.co
-
-      Website: 		http://freehtml5.co/
-      Email: 			info@freehtml5.co
-      Twitter: 		http://twitter.com/fh5co
-      Facebook: 		https://www.facebook.com/fh5co
-
-      //////////////////////////////////////////////////////
-       -->
 
     <!-- Facebook and Twitter integration -->
     <meta property="og:title" content=""/>
