owner fix , image alert

--- a/src/main/resources/public/otherHTMLs/mainReferee.html
+++ b/src/main/resources/public/otherHTMLs/mainReferee.html
@@ -150,7 +150,7 @@
 				</div>
 				<div class="col-md-4 animate-box">
 					<a onclick="displayHistoryAlerts()" class="item-grid text-center">
-						<div class="image" style="background-image: url(images/history_env.png)"></div>
+						<div class="image" style="background-image: url(images/history_env.jpeg)"></div>
 						<div class="v-align">
 							<div class="v-align-middle">
 								<h3 class="title">Watch Message History</h3>
