--- a/src/main/resources/public/otherHTMLs/index.html
+++ b/src/main/resources/public/otherHTMLs/index.html
@@ -65,8 +65,8 @@
 				<h1><a href="index.html">Teammates</a></h1>
 				<nav role="navigation">
 					<ul>
-						<li><a href="otherHTMLs/about.html">About</a></li>
-						<li><a href="otherHTMLs/contact.html">Contact</a></li>
+						<li><a href="about.html">About</a></li>
+						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</nav>
 			</div>
